--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <script src="./Homeworks/homeworks-String.js"></script> -->
   <!-- <script src="./Homeworks/homework-Object.js"></script> -->
   <!-- <script src="./Homeworks/Homework-condition.js"></script> -->
-  <script src="./Homeworks/homework -ternarn and switch case.js"></script>
+  <!-- <script src="./Homeworks/homework -ternarn and switch case.js"></script> -->
+  <script src="./Homeworks/homework-cycle.js"></script>
 </body>
 
 </html>
