added one more  solution to task homework-function.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <!-- <script src="./Homeworks/homework-Object.js"></script> -->
   <!-- <script src="./Homeworks/Homework-condition.js"></script> -->
   <!-- <script src="./Homeworks/homework -ternarn and switch case.js"></script> -->
-  <script src="./Homeworks/homework-cycle.js"></script>
+  <!-- <script src="./Homeworks/homework-cycle.js"></script> -->
+  <script src="./Homeworks/homework-function.js"></script>
 </body>
 
 </html>
