--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- <script src="./Homeworks/Homework-condition.js"></script> -->
   <!-- <script src="./Homeworks/homework -ternarn and switch case.js"></script> -->
   <!-- <script src="./Homeworks/homework-cycle.js"></script> -->
-  <script src="./Homeworks/homework-function.js"></script>
+  <!-- <script src="./Homeworks/homework-function.js"></script> -->
+  <script src="./Homeworks/homework.array.js"></script>
 </body>
 
 </html>
